--- a/code/Hello_World.Rmd
+++ b/code/Hello_World.Rmd
@@ -1,15 +1,15 @@
-# 哈囉，世界！
+# 哈囉，世界！（Hello, World!）
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 options(scipen=999)
 import::from(magrittr, "%>%")
-reticulate::use_python("D:/Program_Files/Anaconda3/python.exe")
+reticulate::use_python(readLines("./../../envar/pypath"))
 ```
 
 ## 何謂字串
 
-把幾個文字符號串接在一起，就形成了字串（string），字串頭尾兩端要用引號，這樣電腦才知道它是字串，例如：`'被單引號包圍的字串'`或`"被雙引號包圍的字串"`。
+把幾個文字符號串接在一起，就形成了字串（string），字串頭尾兩端要用引號（可以是單引號`'`或雙引號`"`），這樣電腦才知道它是字串，例如：`'被單引號包圍的字串'`或`"被雙引號包圍的字串"`。
 
 ## 列出字串
 
@@ -19,7 +19,7 @@ reticulate::use_python("D:/Program_Files/Anaconda3/python.exe")
 print("哈囉，世界！")
 ```
 
-沒錯，`print()`是用來列出它`()`中的文字的，你可以在`()`中放入字串，例如：`"我要列出這個句子"`（注意：字串被引號包圍著），然後執行以下的陳述就可以將該字串列出。
+沒錯，`print()`是用來列出它括弧中的文字的，你可以在`( )`中放入字串，例如：`"我要列出這個句子"`（注意：字串被引號包圍著），然後執行以下的陳述就可以將該字串列出。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
 print("我要列出這個句子")
@@ -30,15 +30,24 @@ print("我要列出這個句子")
 註解（comment）就是給人類寫給自己看的說明文字，電腦會忽略它而不進行任何動作。
 
 註解有二種：
+
 + 單排註解：每一橫列在`#`之後的文字都被視為註解；
+
 + 多排註解：夾在三個引號`"""`之間的文字都被視為註解。
+
 
 ## 加上註解
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-# 我是一個註解，從橫排最左開始就是。
-print("我不是註解，是要列出的字串") # 我是另一個註解，從橫排中間才開始。
+# 我是一個註解，從橫排最左開始就是，不會被執行。
+print("我不是註解，是要列出的字串") # 我是另一個註解，從橫排中間才開始，也不會被執行。
 ```
+
+## 學習要點
+
+1. 學會使用`print()`函式列出想要的文字。
+1. 學會使用`#`、`'''`、`"""`為代碼加上註解。
+
 
 ## 自我練習
 
