--- a/code/Hello_World.Rmd
+++ b/code/Hello_World.Rmd
@@ -19,7 +19,7 @@ reticulate::use_python(readLines("./../../envar/pypath"))
 print("哈囉，世界！")
 ```
 
-沒錯，`print()`是用來列出它括弧中的文字的，你可以在`( )`中放入字串，例如：`"我要列出這個句子"`（注意：字串被引號包圍著），然後執行以下的陳述就可以將該字串列出。
+沒錯，`print( )`是一個函式，用來列出它括弧中的文字的，你可以在`( )`中放入字串，例如：`"我要列出這個句子"`（注意：字串被引號包圍著），然後執行以下的陳述就可以將該字串列出。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
 print("我要列出這個句子")
@@ -43,12 +43,24 @@ print("我要列出這個句子")
 print("我不是註解，是要列出的字串") # 我是另一個註解，從橫排中間才開始，也不會被執行。
 ```
 
+## 尋找幫助
+
+如果英文能力尚可的話，可以直接調用`help( )`函式，將想瞭解的主題放到函式括弧內，例如：
+```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
+print(help(print)) # 列出「print」的幫助內容。
+print(help(help)) # 列出「help」的幫助內容。
+```
+
+
+
 ## 學習要點
 
-1. 學會使用`print()`函式列出想要的文字。
+1. 學會使用`print( )`函式列出想要的文字。
 1. 學會使用`#`、`'''`、`"""`為代碼加上註解。
+1. 學會使用`help( )`查找所需的幫助內容。
 
 
 ## 自我練習
 
-自己設計一段文字，例如：「我叫『苦連天』，每天過著幸福快樂的日子」，試著讓電腦列出，並加入你自己的註解。
+1. 自己設計一段文字，例如：「我叫『苦連天』，每天過著幸福快樂的日子」，試著讓電腦列出，並加入你自己的註解。
+1. 使用`help( )`隨意查找一些自己有興趣的關鍵字，看能找到什麼有趣的內容。
