--- a/code/Basic_Data_Types.Rmd
+++ b/code/Basic_Data_Types.Rmd
@@ -13,8 +13,8 @@ reticulate::use_python(readLines("./../../envar/pypath"))
 ..., -3, -2, -1, 0, 1, 2, 3, ... 這些就是整數（integer）。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-1
-2
+print(1)
+print(2)
 ```
 
 ### 列出整數
@@ -34,17 +34,16 @@ print("3")
 電腦有幾個基本的數據型別，整數（integer）是其中之一，字串（string）也是其中之一，我們可以用`type()`查看物件的型別。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-type(3)
+print(type(3))
 ```
 
 結果中的`<class 'int'>`表示`3`是一個`int`（整數）。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-type("3")
-type("三") # 同時列出"3"和"三"的型別
+print(type("3"), type("三")) # 同時列出"3"和"三"的型別
 ```
 
-以上二個陳述的結果都是`<class 'str'>`表示`"3"`、`"三"`都是`str`（字串），兩者都被引號所包圍。
+以上陳述的結果為`<class 'str'>`表示`"3"`、`"三"`都是`str`（字串），因為兩者都被引號所包圍。
 
 ### 算術運算子（arithmetic operator）
 
@@ -68,35 +67,35 @@ tibble::tribble(~算數運算子, ~說明,
 我們來看看幾個實際的整數算術運算式例子......
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-1 + 2  # 加
-3 - 4  # 減
-5 * 6  # 乘
-8 / 2  # 除
-7 // 3 # 商數
-7 % 3  # 餘數
-3 ** 2 # 次方
+print(1 + 2)  # 加
+print(3 - 4)  # 減
+print(5 * 6)  # 乘
+print(8 / 2)  # 除
+print(7 // 3) # 商數
+print(7 % 3)  # 餘數
+print(3 ** 2) # 次方
 ```
 
-### 自我練習
+### 自我練習（整數算數運算）
 
-1. 打開Jupyter。
+1. 打開Jupyter或Spyder。
 1. 嘗試用整數進行各種算數運算。
 
 
-## 浮點（float）
+## 浮點（floating point）
 
 前面所學的整數只構成了數線上等距離散的點，那數線上其它非整數的點要怎麼表示呢？例如：半個蘋果、四分之三條香蕉、八公升的牛奶由五個人來分。這種情形就要用小數點來表示，因為各個數值的小數點位置不一定相同，小數點不固定而是浮動的，故稱為「浮點」。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-1 / 2  # 半個蘋果
-3 / 4  # 四分之三條香蕉
-8 / 5  # 八公升牛奶分配給五個人
+print(1 / 2)  # 半個蘋果
+print(3 / 4)  # 四分之三條香蕉
+print(8 / 5)  # 八公升牛奶分配給五個人
 ```
 
-細心的同學在前面整數運算式的例子中就可發現`8 / 2`的結果不是`4`（整數）而是`4.0`（浮點），因為python自動將結果的型別改為浮點了。
+細心的同學在前面整數運算式的例子中就可發現`8 / 2`的結果不是`4`（整數）而是`4.0`（浮點），因為python自動將除的結果型別改為浮點了。
 
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-type(8 / 2)
+print(type(8 / 2))
 ```
 
 好奇的你可能會問：「在數學上，`1`完全等於`1.0`、2`完全等於`2.0`，為什麼在電腦上還要特別區分為不同的型別呢？」這是因為電腦的記憶體及儲存媒介所存放的紀錄，只用「0」和「1」來表示，這一大串的0和1的意義，要靠型別區分才能解釋。就好像「大丈夫」出現在中文及日文語境下的意思不同，又好比 The soldier decided to desert his dessert in the desert.（該士兵決定將他的點心捨棄在沙漠裡）其中desert前後意思不同。
@@ -109,16 +108,17 @@ type(8 / 2)
 
 整數和浮點這二者可以互相轉換，要轉成整數用`int( )`，要轉成浮點用`float( )`。
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-int(2.5)       # 浮點轉換為整數，原有小數部分將被移除
-type(int(2.5)) # 浮點轉換為整數，確認改成整數型別
-type(float(3)) # 整數轉換為浮點，確認改成浮點型別
+print(int(2.5))       # 浮點轉換為整數，原有小數部分將被移除
+print(type(int(2.5))) # 浮點轉換為整數，確認改成整數型別
+print(type(float(3))) # 整數轉換為浮點，確認改成浮點型別
 ```
 
-### 自我練習
+### 自我練習（整數浮點算數運算、型別轉換）
 
-1. 打開Jupyter。
+1. 打開Jupyter或Spyder。
 1. 嘗試用整數與浮點進行各種算數運算。
-1. 嘗試在整數與浮點間雙向進行型別轉換。
+1. 使用`type( )`函式，查看運算元與運算結果的型別。
+1. 嘗試在整數與浮點間雙向進行型別轉換，看能不能找出一些規律，在哪些情況下是符合自己預期的？哪些情況下不像是自己預期的？
 
 ## 複數（complex）
 
@@ -144,10 +144,10 @@ tibble::tribble(~比較運算子, ~說明,
 
 注意，python判斷是否相等用`==`（要用二個等號）而不是數學上通用的`=`（只用一個等號），我們來看看幾個實際的比較運算式例子......
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-1 == 2  # 等於
-3 != 4  # 不等於
-5 >= 6  # 大於等於
-7 <= 8  # 小於等於
+print(1 == 2)  # 等於
+print(3 != 4)  # 不等於
+print(5 >= 6)  # 大於等於
+print(7 <= 8)  # 小於等於
 ```
 
 ### 邏輯運算子（logical operator）
@@ -163,18 +163,15 @@ tibble::tribble(~邏輯運算子, ~說明, ~作用,
 
 直接看實例更容易理解邏輯運算：
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-# 「且」的例子
-print(True  and True,
+print(True  and True, # 「且」的例子
       True  and False,
       False and True,
       False and False)
-# 「或」的例子
-print(True  or True,
+print(True  or True, # 「或」的例子
       True  or False,
       False or True,
       False or False)
-# 「非」的例子
-print(not True,
+print(not True, # 「非」的例子
       not False)
 ```
 
@@ -197,49 +194,131 @@ tibble::tribble(~運算子               , ~說明,
 
 因為括弧`( )`是最優先的，如果順序不容易記住的話，就自己將要先執行的運算用括弧圍住即可，例如：
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-2 + 3 * 4 # 因為先乘除再加減，python先執行 3 * 4 = 12，再執行 2 + 12 = 14
-(2 + 3) * 4 # 使用括弧就可以先做 2 + 3 = 5，再做 5 * 4 = 20
+print( 2 + 3  * 4) # 因為先乘除再加減，python先執行 3 * 4 = 12，再執行 2 + 12 = 14
+print((2 + 3) * 4) # 使用括弧就可以先做 2 + 3 = 5，再做 5 * 4 = 20
 ```
 
 ### 型別轉換（布林、整數、浮點）
 
 布林也能和整數與浮點互相轉換，要轉成布林用`bool( )`。
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-bool() # 無輸入值為假
-bool(0) # 整數0為假
-bool(1) # 整數1為真
-bool(0.0) # 浮點零值為假
-bool(0.1) # 非零浮點為真
-bool("") # 空字串為假
-bool(" ") # 非空字串為真
-int(True) # 真值為整數1
-int(False) # 假值為整數0
-float(True) # 真值為浮點1.0
-float(False) # 假值為浮點0.0
+print(bool()) # 無輸入值為假
+print(bool(0)) # 整數0為假
+print(bool(1)) # 整數1為真
+print(bool(0.0)) # 浮點零值為假
+print(bool(0.1)) # 非零浮點為真
+print(bool("")) # 空字串為假
+print(bool(" ")) # 非空字串為真
+print(int(True)) # 真值為整數1
+print(int(False)) # 假值為整數0
+print(float(True)) # 真值為浮點1.0
+print(float(False)) # 假值為浮點0.0
 ```
+
+
+### 自我練習（比較運算、邏輯運算、型別轉換）
+
+1. 打開Jupyter或Spyder。
+1. 嘗試用整數與浮點進行各種比較運算。
+1. 嘗試用比較運算結果再進行邏輯運算。
+1. 適當使用`type( )`函式，查看運算元與運算結果的型別。
+1. 嘗試在整數、浮點、布林三者間進行型別轉換，看能不能找出一些規律，在哪些情況下是符合自己預期的？哪些情況下不像是自己預期的？
+
+
 ## 字串（string）
 
 ### 字串運算
 
-在python中，字串也可以使用算數運算子的「加」（接續）和「乘」（重複），像這樣：
+在python中，字串也可以使用算術運算子的「加」（接續）和「乘」（重複），像這樣：
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
 print("Pen" + "Pineapple" + "Apple" + "Pen") # 將四個單詞接續起來
 print("Apple" * 2) # 將這個單詞重複二次
 print("Pen" + "Pine" + 2 * "Apple" + "Pen") # 先乘再加，先重複再接續
 ```
 
+在python中，字串也可以使用比較運算子的「大於」和「小於」，像這樣：
+```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
+print("A" > "z", "Z" < "a")
+print("Dog" > "Cat", "Apple" < "Banana")
+```
+
+
 ### 型別轉換（字串、整數、浮點）
 
 字串也能和整數、浮點及布林互相轉換，要轉成字串用`str( )`。
 ```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
-str() # 無輸入值得空字串
-str(1) # 輸入整數得整數字串
-str(1.0) # 輸入浮點得浮點字串
-str(True) # 輸入布林真值為真值字串
-str(False) # 輸入布林假值得假值字串
-int("1") # 整數字串轉為整數
-int("3.14") # 帶小數的字串不能轉為整數
-float("3.14") # 帶小數點的字串轉為浮點
-float("1,234.5") # 字串轉為浮點，字串不得帶有撇節
+print(str()) # 無輸入值得空字串（而非空白字符）
+print(str(1)) # 輸入整數得整數字串
+print(str(1.0)) # 輸入浮點得浮點字串
+print(str(True)) # 輸入布林真值為真值字串
+print(str(False)) # 輸入布林假值得假值字串
+print(int("1")) # 整數字串轉為整數
+print(int("3.14")) # 帶小數的字串不能轉為整數，錯誤！
+print(float("3.14")) # 帶小數點的字串轉為浮點
+print(float("1,234.5")) # 字串轉為浮點，字串不得帶有撇節，錯誤！
+```
+
+### 自我練習（混合四種型別三種運算、四種型別轉換、調整運算執行順序）
+
+1. 打開Jupyter或Spyder。
+1. 嘗試字串的算術運算與比較運算，後者再接邏輯運算。
+1. 適當使用`type( )`函式，查看運算元與運算結果的型別。
+1. 嘗試在整數、浮點、布林、字串四者間進行型別轉換，看能不能找出一些規律，在哪些情況下是符合自己預期的？哪些情況下不像是自己預期的？
+1. 混合使用包括整數、浮點、布林、字串四種型別，進行包括算術、比較、邏輯三種運算，使用括弧強制改變各運算子的執行順序，看結果是否符合自己預期。
+
+
+### 字串方法
+
+方法（methods）就是適用於某型別或類別的函式（functions），要簡單地區別這二者，可看它們對某物件的用法，假設物件名為object，函式名為function，方法名為method：
+
++ 函式用法：`function(object)`
+
++ 方法用法：`object.method()`
+
+函式用於字串舉例如下：
+```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
+# len( )指length，是個回報長度的函式，物件（字串）放在括弧內，len( )會回報該物件的長度。
+print(len('Dog'), len('Duck'), len('Apple'), len('Banana')) 
+```
+
+字串方法很多，例示如下：
+```{python, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
+print('hElLo, wOrLd!'.capitalize()) # capitalize( )：首字改成大寫。
+print('hElLo, wOrLd!'.upper()) # upper( )：全部改成大寫。
+print('hElLo, wOrLd!'.lower()) # lower( )：全部改成小寫。
+print('hElLo, wOrLd!'.swapcase()) # swapcase( )：大寫改小寫，小寫改大寫。
+print('Hello, World!'.count('o')) # count( )：回報某字串（此處為「o」）出現幾次。
+print('Hello, World!'.find('o')) # find( )：回報某字串（此處為「o」）最先出現位置（從0算起），找不到的話回報「-1」。
+print('Hello, World!'.index('o')) # index( )：回報某字串（此處為「o」）最先出現位置（從0算起），找不到就丟出錯誤信息。
+print('Hello, World!'.rfind('o')) # find( )：回報某字串（此處為「o」）最後出現位置（從0算起），找不到的話回報「-1」。
+print('Hello, World!'.rindex('o')) # index( )：回報某字串（此處為「o」）最後出現位置（從0算起），找不到就丟出錯誤信息。
+print('Hello, World!'.replace('Hello', 'Hi')) # replace( )：字串替代，此處用Hi替代Hello。
+print('  Hello, World!  '.strip()) # strip( )：消除字串前後空白。
+print('Hello, World!'.zfill(20)) # zfill( )：在字串左側補0至指定長度（此處為20）。
+```
+
+### 自我練習（字串方法）
+
+1. 打開Jupyter或Spyder。
+1. 將學過的每個字串方法，至少用自己的例子執行三次，看看與自己的預期是否相同。
+
+
+## 學習要點
+
+1. 瞭解「整數、浮點、布林、字串」四種型別。
+1. 學會使用`type( )`查看物件型別。
+1. 學會使用`int( )`、`float( )`、'bool( )`、'str( )`等函式，能在不同型別間進行轉換。
+1. 瞭解「算術運算」、「比較運算」、「邏輯運算」用在哪種場合或情境，能掌握各個運算符號（運算子）的具體使用方法。
+1. 學會使用多種字串方法，並能自行舉例說明。
+
+## 尋找幫助
+
+前面已經學過了如何利用`help( )`函式輸入關鍵字使其回報相關內容，這裡列示了一些與本章所列的關鍵字，如有興趣可視需要自己執行看看。因為執行結果很長很佔篇幅，這裡就不列出了。
+```{python, eval = FALSE, include = TRUE, echo = TRUE, message = TRUE, warning = TRUE, error = TRUE, results = TRUE}
+print(help(type))
+print(help(int))
+print(help(float))
+print(help(bool))
+print(help(str))
 ```
 
